--- a/index.html
+++ b/index.html
@@ -105,17 +105,75 @@
           <span class="basket-text">5</span>
         </div>
         <div class="backdrop is-hidden" data-backdrop>
+          <a class="backdrop-area" href="#" data-close-mod-link></a>
           <div class="modal">
             <p class="modal-title">Ваша корзина:</p>
             <ul class="modal-list">
-              <li class="modal-list-item">Lorem ipsum dolor sit amet.</li>
+              <li class="modal-list-item">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                modi quos autem et tempora dolor? Dolorem non, quis at eius ex
+                nemo quisquam dolores numquam accusamus fugit eveniet magnam
+                consequuntur necessitatibus dolorum ipsam debitis iste.
+                Consectetur, accusantium laboriosam, sapiente eos distinctio
+                officia eum, molestias esse dolores similique expedita
+                doloremque. Illum.
+              </li>
+              <li class="modal-list-item">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                modi quos autem et tempora dolor? Dolorem non, quis at eius ex
+                nemo quisquam dolores numquam accusamus fugit eveniet magnam
+                consequuntur necessitatibus dolorum ipsam debitis iste.
+                Consectetur, accusantium laboriosam, sapiente eos distinctio
+                officia eum, molestias esse dolores similique expedita
+                doloremque. Illum.
+              </li>
+              <li class="modal-list-item">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                modi quos autem et tempora dolor? Dolorem non, quis at eius ex
+                nemo quisquam dolores numquam accusamus fugit eveniet magnam
+                consequuntur necessitatibus dolorum ipsam debitis iste.
+                Consectetur, accusantium laboriosam, sapiente eos distinctio
+                officia eum, molestias esse dolores similique expedita
+                doloremque. Illum.
+              </li>
+              <li class="modal-list-item">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                modi quos autem et tempora dolor? Dolorem non, quis at eius ex
+                nemo quisquam dolores numquam accusamus fugit eveniet magnam
+                consequuntur necessitatibus dolorum ipsam debitis iste.
+                Consectetur, accusantium laboriosam, sapiente eos distinctio
+                officia eum, molestias esse dolores similique expedita
+                doloremque. Illum.
+              </li>
+              <li class="modal-list-item">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                modi quos autem et tempora dolor? Dolorem non, quis at eius ex
+                nemo quisquam dolores numquam accusamus fugit eveniet magnam
+                consequuntur necessitatibus dolorum ipsam debitis iste.
+                Consectetur, accusantium laboriosam, sapiente eos distinctio
+                officia eum, molestias esse dolores similique expedita
+                doloremque. Illum.
+              </li>
+              <li class="modal-list-item">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
+                modi quos autem et tempora dolor? Dolorem non, quis at eius ex
+                nemo quisquam dolores numquam accusamus fugit eveniet magnam
+                consequuntur necessitatibus dolorum ipsam debitis iste.
+                Consectetur, accusantium laboriosam, sapiente eos distinctio
+                officia eum, molestias esse dolores similique expedita
+                doloremque. Illum.
+              </li>
               <li class="modal-list-item">Lorem ipsum dolor sit amet.</li>
               <li class="modal-list-item">Lorem ipsum dolor sit amet.</li>
               <li class="modal-list-item">Lorem ipsum dolor sit amet.</li>
               <li class="modal-list-item">Lorem ipsum dolor sit amet.</li>
             </ul>
             <p class="modal-title">ИТОГО: 5000 грн.</p>
-            <button class="button modal-button" data-close-modal>
+            <button
+              class="button modal-button"
+              id="close-button"
+              data-close-mod-btn
+            >
               Закрыть
             </button>
             <a class="button modal-button" href="./another-page.html"
@@ -636,21 +694,17 @@
     <script>
       const refs = {
         openModalBtn: document.querySelector("[data-open-modal]"),
-        closeModalBtn: document.querySelector("[data-close-modal]"),
+        closeModalBtn: document.querySelector("[data-close-mod-btn]"),
+        closeModalLink: document.querySelector("[data-close-mod-link]"),
         backdrop: document.querySelector("[data-backdrop]"),
       };
 
       refs.openModalBtn.addEventListener("click", toggleModal);
       refs.closeModalBtn.addEventListener("click", toggleModal);
-
-      refs.backdrop.addEventListener("click", logBackdropClick);
+      refs.closeModalLink.addEventListener("click", toggleModal);
 
       function toggleModal() {
         refs.backdrop.classList.toggle("is-hidden");
-      }
-
-      function logBackdropClick() {
-        console.log("Это клик в бекдроп");
       }
     </script>
   </body>
